--- a/style.css
+++ b/style.css
@@ -445,6 +445,7 @@ p {
     transition: 0.3s ease;
     cursor: pointer;
     width: 300px;
+    margin: auto;
 }
 .grid-blog .blog-item:hover {
     box-shadow: 0px 6px 15px rgba(0,0,0,0.2);
@@ -484,6 +485,11 @@ p {
 }
 
 /* FAQ SECTION */
+.faqs-main-section {
+    width: 100%;
+    background-color: #ffffff;
+    padding: 80px 0;
+}
 .faqs-section {
     width: 100%;
     padding: 80px 80px;
@@ -622,6 +628,7 @@ p {
     .project-card .project-items {
         width: 350px;
         height: 400px;
+        margin: auto;
     }
     .project-items img {
         height: 55%;
@@ -718,24 +725,6 @@ p {
     .project-items img {
         height: 55%;
     }
-    /* FREE DEMO & TRIAL SESSIONS */
-    .free-class {
-        padding: 60px 20px;
-    }
-    .free-class .free-detail {
-        padding: 15px;
-    }
-    .free-detail h2 {
-        font-size: 1.5rem;
-    }
-    .free-detail p {
-        font-size: 0.95rem;
-    }
-    .free-detail button {
-        padding: 10px 20px;
-        font-size: 1rem;
-    }
-
     /* FREE DEMO & TRIAL SESSIONS */
     .free-class {
         padding: 60px 20px;
